# libsass-math

./: .gitignore  CMakeLists.txt  README.md
src/: math.cpp
test/basic/: expected_output.css  input.scss
